# press/views/__init__.py
@@ -7,7 +7,8 @@ here = Path(__file__).parent
 def includeme(config):
     """Declaration of routing"""
     add_route = config.add_route
-    add_route('ping', '/api/ping')
+    add_route('ping', '/ping')
+    add_route('api-ping', '/api/ping')
     add_route('auth-ping', '/api/auth-ping')
     add_route('publish-ping', '/api/publish-ping')
 
@@ -21,9 +22,6 @@ def includeme(config):
     s = config.registry.settings
     s['pyramid_swagger.exclude_paths'] = [
         '^/api-docs/?',
-        '^/api/ping/?',
-        '^/api/auth-ping/?',
-        '^/api/publish-ping/?',
     ]
     s['pyramid_swagger.schema_file'] = 'swagger.yaml'
     s['pyramid_swagger.schema_directory'] = str(here / 'api-docs')
